# cmake_android

./: .gitignore  CMakeLists.txt  README.md  cmake_android_configure.example  cmake_linux_configure.example
android/: .gitignore  AndroidManifest.cmake  CMakeLists.txt
android/jni/: Android.cmake  Application.cmake  CMakeLists.txt  entrypoint.cpp
android/res/values/: strings.xml
android/src/com/example/hellogles/: HelloGLES.java  NativeWrapper.java
android/src/com/example/hellojni/: HelloJni.java
android/src/com/example/render/: GLRender.java  GLView.java
cmake/: FindOpenGLES.cmake  android.toolchain.cmake
cmake/templates/: Android.mk.in  AndroidManifest.xml.in  Application.mk.in
src/: CMakeLists.txt  jnientrypoint.cpp  nativemain.cpp  nativemain.h
